--- a/src/assets/css/_partials/typography.scss
+++ b/src/assets/css/_partials/typography.scss
@@ -344,6 +344,6 @@ a {
 
   .button {
     margin: rem($baseline/2) rem($baseline);
-    width: rem(250);
+    min-width: rem(250);
   }
 }
